Fix dark mode colors

--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -8,14 +8,6 @@
     --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --foreground-rgb: 255, 255, 255;
-        --background-start-rgb: 0, 0, 0;
-        --background-end-rgb: 0, 0, 0;
-    }
-}
-
 body {
     color: rgb(var(--foreground-rgb));
     background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
@@ -23,4 +15,16 @@ body {
 
 .color-major {
     color: #0f6476;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --foreground-rgb: 255, 255, 255;
+        --background-start-rgb: 9, 54, 63;
+        --background-end-rgb: 9, 54, 63;
+    }
+
+    .color-major {
+        color: #c6dadf;
+    }
 }
